[gd_scene load_steps=12 format=3 uid="uid://u1p0vojt75ux"]

[ext_resource type="PackedScene" uid="uid://d4mmehk8jrrto" path="res://scenes/templates/exit_button.tscn" id="2_7w81a"]
[ext_resource type="Script" uid="uid://rl5iu6bhvxjb" path="res://scripts/Test/title_screen.gd" id="2_cro8k"]
[ext_resource type="Script" uid="uid://dttyd4hp4q4lw" path="res://scripts/Test/question.gd" id="3_bgcr8"]
[ext_resource type="Script" uid="uid://bxpalvhos0lti" path="res://scripts/Test/score_monitoring.gd" id="5_t76ik"]
[ext_resource type="AudioStream" uid="uid://w81opueue3m0" path="res://scripts/Test/Sounds/wrong-47985.mp3" id="6_0ltnd"]
[ext_resource type="AudioStream" uid="uid://nmxtfe66vj2f" path="res://scripts/Test/Sounds/success-340660.mp3" id="7_0ltnd"]
[ext_resource type="Script" uid="uid://cu753simncxae" path="res://scripts/Test/finish_screen.gd" id="8_0ltnd"]

[sub_resource type="Animation" id="Animation_t76ik"]
resource_name = "FadeInCorrect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.76666665),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_vijmd"]
resource_name = "FadeInIncorrect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../IncorrectMessage:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.96666664),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_7w81a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../IncorrectMessage:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pb7v1"]
_data = {
&"FadeInCorrect": SubResource("Animation_t76ik"),
&"FadeInIncorrect": SubResource("Animation_vijmd"),
&"RESET": SubResource("Animation_7w81a")
}

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 252.0
offset_right = 900.0
offset_bottom = 648.0

[node name="ExitButton" parent="." instance=ExtResource("2_7w81a")]
layout_mode = 0
offset_left = -252.0
offset_right = -148.0

[node name="TitleScreen" type="Control" parent="."]
anchors_preset = 0
offset_left = -252.0
offset_right = 900.0
offset_bottom = 648.0
script = ExtResource("2_cro8k")

[node name="Title" type="Label" parent="TitleScreen"]
layout_mode = 0
offset_left = 360.0
offset_top = 24.0
offset_right = 792.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 64
text = "A test of sorts"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="TitleScreen"]
layout_mode = 0
offset_left = 192.0
offset_top = 152.0
offset_right = 960.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 128
text = "Start"

[node name="TemplateQuestion" type="Control" parent="."]
visible = false
anchors_preset = 0
script = ExtResource("3_bgcr8")

[node name="QuestionTitle" type="Label" parent="TemplateQuestion"]
layout_mode = 0
offset_left = -140.0
offset_right = 788.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 48
text = "Question Title"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnswerButtons" type="BoxContainer" parent="TemplateQuestion"]
layout_mode = 0
offset_left = 68.0
offset_top = 256.0
offset_right = 580.0
offset_bottom = 552.0
alignment = 1
vertical = true

[node name="AnswerButtonsTop" type="BoxContainer" parent="TemplateQuestion/AnswerButtons"]
layout_mode = 2
alignment = 1

[node name="Answer1" type="Button" parent="TemplateQuestion/AnswerButtons/AnswerButtonsTop"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Answer1"

[node name="Answer2" type="Button" parent="TemplateQuestion/AnswerButtons/AnswerButtonsTop"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Answer2"

[node name="AnswerButtonsBottom" type="BoxContainer" parent="TemplateQuestion/AnswerButtons"]
layout_mode = 2
alignment = 1

[node name="Answer3" type="Button" parent="TemplateQuestion/AnswerButtons/AnswerButtonsBottom"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Answer3"

[node name="Answer4" type="Button" parent="TemplateQuestion/AnswerButtons/AnswerButtonsBottom"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Answer4"

[node name="AnimationPlayer" type="AnimationPlayer" parent="TemplateQuestion"]
root_node = NodePath("CorrectMessage")
libraries = {
&"": SubResource("AnimationLibrary_pb7v1")
}

[node name="CorrectMessage" type="Label" parent="TemplateQuestion/AnimationPlayer"]
visible = false
offset_left = 424.0
offset_top = 160.0
offset_right = 728.0
offset_bottom = 227.0
theme_override_font_sizes/font_size = 48
text = "Correct!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncorrectMessage" type="Label" parent="TemplateQuestion/AnimationPlayer"]
visible = false
offset_left = 424.0
offset_top = 160.0
offset_right = 728.0
offset_bottom = 227.0
theme_override_font_sizes/font_size = 48
text = "Incorrect!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="TemplateQuestion"]
layout_mode = 0
offset_left = 220.0
offset_top = 272.0
offset_right = 428.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 48
text = "Score: 0"
horizontal_alignment = 1
script = ExtResource("5_t76ik")

[node name="Failure" type="AudioStreamPlayer2D" parent="TemplateQuestion"]
position = Vector2(324, 256)
stream = ExtResource("6_0ltnd")

[node name="Success" type="AudioStreamPlayer2D" parent="TemplateQuestion"]
position = Vector2(324, 256)
stream = ExtResource("7_0ltnd")

[node name="FinishScreen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -252.0
offset_right = 900.0
offset_bottom = 648.0
script = ExtResource("8_0ltnd")

[node name="WinText" type="Label" parent="FinishScreen"]
layout_mode = 0
offset_left = 128.0
offset_top = 144.0
offset_right = 1040.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 48
text = "Test Complete!"
horizontal_alignment = 1

[node name="Score" type="Label" parent="FinishScreen"]
layout_mode = 0
offset_left = 328.0
offset_top = 200.0
offset_right = 840.0
offset_bottom = 245.0
theme_override_font_sizes/font_size = 32
text = "Score: -1"
horizontal_alignment = 1

[node name="PlayAgain" type="Button" parent="FinishScreen"]
layout_mode = 0
offset_left = 352.0
offset_top = 256.0
offset_right = 800.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 48
text = "Play Again"

[connection signal="start_test" from="TitleScreen" to="TemplateQuestion" method="start"]
[connection signal="pressed" from="TitleScreen/StartButton" to="TitleScreen" method="start"]
[connection signal="quiz_finish" from="TemplateQuestion" to="FinishScreen" method="show_finsh"]
[connection signal="score_change" from="TemplateQuestion" to="TemplateQuestion/Score" method="update_score"]
[connection signal="pressed" from="TemplateQuestion/AnswerButtons/AnswerButtonsTop/Answer1" to="TemplateQuestion" method="answer_1"]
[connection signal="pressed" from="TemplateQuestion/AnswerButtons/AnswerButtonsTop/Answer2" to="TemplateQuestion" method="answer_2"]
[connection signal="pressed" from="TemplateQuestion/AnswerButtons/AnswerButtonsBottom/Answer3" to="TemplateQuestion" method="answer_3"]
[connection signal="button_up" from="TemplateQuestion/AnswerButtons/AnswerButtonsBottom/Answer4" to="TemplateQuestion" method="answer_4"]
[connection signal="pressed" from="FinishScreen/PlayAgain" to="FinishScreen" method="play_again"]
